[gd_scene load_steps=3 format=3 uid="uid://diuq1xu2sa3uh"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_dijci"]
[ext_resource type="Texture2D" uid="uid://cksq2ko7jhvuu" path="res://Assets/Space/PNG/playerShip1_blue.png" id="2_cmlnn"]

[node name="Player" type="Area2D"]
scale = Vector2(0.75, 0.75)
collision_layer = 2
collision_mask = 21
script = ExtResource("1_dijci")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cmlnn")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-50, -5, -47, 24, -44, 25, -41, 21, -14, 28, -7, 38, 7, 38, 14, 28, 41, 21, 43, 25, 46, 25, 50, -5, 45, -7, 36, 2, 13, -12, 9, -38, -9, -38, -12, -12, -36, 1, -46, -7)

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(0, -44)

[node name="PowerUpEnd" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="PowerUpEnd" to="." method="_on_power_up_end_timeout"]
